Fix the content to 3 per row and align to center

--- a/trybe-exercicios/fundamentos/secao06HTMLECSSFormsFlexboxEResponsivo/dia03CSSFlexboxPt1/exercise-tech-gallery-master/style.css
+++ b/trybe-exercicios/fundamentos/secao06HTMLECSSFormsFlexboxEResponsivo/dia03CSSFlexboxPt1/exercise-tech-gallery-master/style.css
@@ -18,7 +18,14 @@
   margin-left: 10px;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 header {
+  width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -38,4 +45,34 @@ section:first-of-type {
   justify-content: center;
   align-items: center;
   padding: 0.7em;
+}
+
+section:last-of-type {
+  width: 70%;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1em;
+  justify-content: center;
+  padding: 1em;
+}
+
+section div {
+  background-color: rgb(239, 239, 239);
+  border-radius: 10px;
+  box-shadow: 2px 2px 1px rgb(136, 136, 136);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+  width: 31%;
+}
+
+section hr {
+  width: 30%;
+  margin-top: 1em;
+}
+
+.gallery-img {
+  width: 90%;
 }
